assets/css/blog.css
@font-face {
    font-family: refrigerator-light;
    src: url(/assets/fonts/refrigerator-light.ttf);
}

@font-face {
    font-family: oxygen-regular;
    src: url(/assets/fonts/oxygen/Oxygen-Regular.ttf);
}

/*@font-face {
    font-family: oxygen-bold;
    src: url(/assets/fonts/oxygen/Oxygen-Bold.ttf);
}

@font-face {
    font-family: oxygen-light;
    src: url(/assets/fonts/oxygen/Oxygen-Light.ttf);
}*/

body {
  background: #F0F0F0;
  margin: 0px;
  padding: 10px;
  font-family: helvetica, sans-serif;
  text-align: center;
  color: #333;
}

a {
  text-decoration: none;
  color: gray;
}

a:hover {
  color: #979797;
}

a < img {
  border: none;
  outline: none;
}

/*#content {
  width: 700px;
  margin: auto;
}*/

#content {
  max-width: 700px;
  margin: auto;
}

#blog-title {
  font-size: 50px;
  margin: 25px;
  font-family: refrigerator-light,helvetica,sans-serif;
}

#blog-subtitle {
  font-size: 20px;
  margin: 20px;
  font-family: menlo,helvetica,sans-serif;
}
  
#prevbutton {
  float: left;
  margin: 20px;
}

#nextbutton {
  float: right;
  margin: 20px;
}

.separator {
  text-align: center;
  border-top: dashed 3px;
  width: 100%;
}

.post-title {
  font-size:40px;
  margin-top: 50px;
  font-family: oxygen-regular,sans-serif;
}

.post-content > * {
  font-size: 20px;
  line-height: 1.35em;
}

.post-tags > a {
  color: inherit;
}

.taglink {
  padding: 20px 10px;
}

.taglink:hover {
  color: #888;
}

a.blogbutton {
  display: inline-block;
  cursor: pointer;
  padding: 10px 30px;
  background-color: #888;
  margin: 10px;
  color: #F0F0F0;
  text-decoration: none;
}

a.blogbutton:hover {
  background-color: #969696;
}

a.blogbutton:active {
  background-color: #6A6A6A;
}

